# user_server

./: .gitignore  Dockerfile  README.md  api_docs.py  app.py  config.py  database.py  docker-compose.yml  logging_config.py  pyproject.toml  rate_limiting.py
.claude/: settings.local.json
backlog/completed/: api-endpoint-tests.md
backlog/completed/defects/: string-length-limits.md  username-length-validation.md
backlog/completed/features/: delete-user-endpoint.md  update-user-endpoint.md
backlog/completed/tech-debt/: comprehensive-docstrings.md  unit-tests.md
backlog/needs-refinement/: README.md  database-indexes.md  detailed-error-messages.md  email-format-validation.md  enhanced-health-check.md  input-sanitization.md  jwt-authentication-setup.md  login-logout-endpoints.md  multiple-criteria-filtering.md  proper-http-status-codes.md  request-error-logging.md  request-logging.md  response-caching.md  role-enumeration.md  search-functionality.md  string-length-limits.md  unit-tests.md  update-user-endpoint.md  username-length-validation.md
middleware/: __init__.py  request_logging.py
migrations/versions/: 186e85af2a9e_add_password_hash_field_to_user_model.py  aa7e61faebcd_make_password_hash_field_nullable.py  c27a4bd6e785_initial_migration_with_user_model.py
models/: __init__.py  user.py
routes/: __init__.py  users.py  users_api.py
schemas/: error_schemas.py  user_schemas.py
services/: user_service.py
tests/: conftest.py  fixtures.py  test_api_docs.py  test_api_endpoints.py  test_app_creation.py  test_config.py  test_logging_config.py  test_middleware.py  test_rate_limiting.py  test_user_model.py  test_user_schemas.py  test_user_service.py  test_users_api.py
(+14 files in other folders)
