[project]
name = "user_server"
version = "0.1.0"
description = "Dockerized Flask User Server"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
]
