[project]
name = "user_server"
version = "0.1.0"
description = "Dockerized Flask User Server"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
    "structlog>=24.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
    "-v"
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/tests/*",
    "test_*.py",
    "*_test.py",
    "setup.py",
    "venv/*",
    "*/venv/*",
    ".venv/*",
    "*/.venv/*",
    "htmlcov/*",
    ".coverage",
    "coverage.xml"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
